--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Smile.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itext-pdfa-5.5.6.jar=itext-5.5.6/itext-pdfa-5.5.6.jar
+file.reference.itext-xtra-5.5.6.jar=itext-5.5.6/itext-xtra-5.5.6.jar
+file.reference.itextpdf-5.5.6.jar=itext-5.5.6/itextpdf-5.5.6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.itext-pdfa-5.5.6.jar}:\
+    ${file.reference.itext-xtra-5.5.6.jar}:\
+    ${file.reference.itextpdf-5.5.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
